# pen_plotter_2025

./: LICENSE.txt  README.md  README_JP.md
design/: printer_all_component.io
design/sub_components/: printer_base.io  printer_base_plate.io  printer_base_rail_left.io  printer_base_rail_right.io  printer_bridge.io  printer_bridge_gear_all.io  printer_bridge_rail.io  printer_bridge_stand_gear_front_wheel.io  printer_bridge_stand_gear_motor.io  printer_bridge_stand_gear_rear_wheel.io  printer_bridge_stand_left.io  printer_bridge_stand_left_no_gear.io  printer_bridge_stand_right.io  printer_bridge_stand_right_no_gear.io  printer_ev3.io  printer_ev3_L-mortor.io  printer_paper_base.io  printer_pen_hold_part_left.io  printer_pen_hold_part_right.io  printer_pen_holder.io  printer_pen_holder_motor_direct_coupled_gear_.io  printer_pen_holder_motor_direct_coupled_screw_gear.io  printer_pen_holder_motor_powor_transmission_gear_.io  printer_pen_holder_no_gear.io  printer_pen_holder_penhold_parts_direct_connect_gear.io  printer_pen_holder_rear_wheel.io
ev3/printer/: Makefile.inc  app.c  app.cfg  app.h  cntl.c
lppe/: CMakeLists.txt  build.sh  reload.sh
lppe/cross/: cross.cpp
lppe/gui/: colormap_manager.cpp  colormap_manager.hpp  converter_manager.cpp  converter_manager.hpp  converter_registry.cpp  filter_calc_manager.cpp  filter_calc_manager.hpp  filter_registry.cpp  filters.cpp  filters.hpp  gui.cpp  gui.hpp  gui_helpers.cpp  gui_helpers.hpp  main.cpp  optimizer.cpp  optimizer.hpp  output_manager.cpp  output_manager.hpp  shell_manager.cpp  shell_manager.hpp  vector_converters.cpp  vector_converters.hpp
lppe/img/: colormap_generator.cpp  colormap_generator.hpp  filter_funcs.cpp  filter_funcs.hpp  vector_data.cpp  vector_data.hpp
lppe/optimizer/: optimizer.cpp  optimizer.hpp
